examples/test/testpolicy18880.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18880
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key14: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value23
          key32: value48
          key12: value33
      podSelector:
        matchLabels:
          key10: value22
